# fast-osmpbf

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: CI.yml
fast-osmpbf/: Cargo.toml  README.md  build.rs
fast-osmpbf-js/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  wrapper.d.ts
fast-osmpbf-js/src/: element.rs  lib.rs
fast-osmpbf/examples/: count_addresses.rs  count_ways.rs
fast-osmpbf/proto/: osmdata.proto  osmformat.proto
fast-osmpbf/src/: element.rs  lib.rs  parser.rs  prelude.rs  reader.rs  simd.rs
